--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.3.0",
   "description": "webpack-template",
   "main": "index.js",
+  "homepage": "https://warbonnet333.github.io/wallet-grid/",
   "scripts": {
     "dev": "webpack-dev-server --open --config ./config/webpack.dev.conf.js",
     "prod": "npm run clean -s && set NODE_ENV=production && webpack --config ./config/webpack.build.conf.js",
